--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+logcondiscr_1.0.1 (December 1, 2011):
+---------------------------------
+- Corrected a minor typo in the help for logConDiscrMLE().
+- Added NAMESPACE
+- Updated KRs contact details
+
 logcondiscr_1.0.0 (initial version):
 ---------------------------------
 - Provide functions to estimate a log-concave probability mass function.
